# dorado

./: .buildinfo  .coveragerc  .gitignore  LICENSE  README.md  deltarcm_particles.ipynb  genindex.html  index.html  objects.inv  output.txt  particle_track.py  particletools.py  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  test_case.py
.doctrees/: environment.pickle  index.doctree
.ipynb_checkpoints/: deltarcm_particles-checkpoint.ipynb
_modules/: index.html
_sources/: index.rst.txt
_static/: documentation_options.js
apiref/: index.html  lagrangianwalker.html  parallelrouting.html  particletools.html  particletrack.html  routines.html
background/: index.html
conda/: conda_build_config.yaml  meta.yaml
docs/: Makefile  conf.py  index.rst
doctrees/: environment.pickle
dorado/: __init__.py  lagrangian_walker.py  logging_config.py  parallel_routing.py  particle_tools.py  particle_track.py  routines.py  spatial.py
examples/: animate_deltarcm_particles.py  deltarcm_particles.ipynb  draw_anuga_particle_paths.py  draw_deltarcm_particle_paths.py  ex_anuga_data.npz  ex_deltarcm_data.npz  example01.html  example02.html  example03.html  example04.html  example05.html  example06.html  example07.html  example08.html  example09.html  example10.html  example11.html  example12.html  example13.html  example14.html  example_case.py  index.html  nourishment_example.py  parallel_comparison.py  particle_flagging_with_additional_outputs.ipynb  set_timestep_anuga_particles.py  spatial_exposure_time_example_Delft3DFM.ipynb  test_case.py  (+10 more)
(+261 files in other folders)
